--- a/indel.html
+++ b/indel.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title> My first GIT Respo</title>
-<link rel="stylesheet" href=:style.css" media="screen">
+<link rel="stylesheet" href="style.css" media="screen">
 </head>
 <body>
 <h1> Respo </h1>
